# shift

./: .gitignore  .replit  BASH_CONFLICT_FIX.md  CROSS_PLATFORM.md  DEPLOYMENT-STRATEGY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.web  INSTALL-WINDOWS.md  INSTALL.md  ONE-LINER-READINESS.md  README.md  STANDALONE-CHECKLIST.md  STANDALONE-README.md  SUCCESS-REPORT.md  Shift.psm1  build_and_publish.sh  build_deb.sh  build_standalone.bat  build_standalone.sh  build_windows.sh  cli.py  cloudrun-service.yaml  deploy-actually-free.sh  deploy-cloudrun.sh  deploy-codespaces.sh  deploy-koyeb.sh  deploy-replit-detailed.sh  deploy.sh  doc_converter.py  docker-compose.yml  install-cmd.bat  install-unix.sh  install-windows.bat  install-windows.ps1  install.ps1  main.py  pdf_outlook_attachable.py  professional.css  pyproject.toml  (+25 more)
.github/workflows/: deb-package.yml  release.yml
.pybuild/cpython3_3.10/: .pydistutils.cfg
chocolatey/: shift.nuspec
debian/: README.Debian  changelog  control  postinst  rules  shift.postinst.debhelper  shift.prerm.debhelper
debian/scripts/: shift
public/: index.html
scoop/: shift.json
shift/: __init__.py  __main__.py
tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
winget/: shift.yaml
