[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shift-api"
version = "1.0.0"
description = "Shift Document Processing API"
dependencies = [
    "flask==2.3.3",
    "pypdf==5.9.0",
    "pymupdf==1.26.3", 
    "PyPDF2==3.0.1",
    "python-docx==1.2.0",
    "markdown==3.8.2",
    "beautifulsoup4==4.13.4",
    "pillow==11.3.0",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",
    "fpdf2==2.8.3",
    "docx2python==3.5.0"
]
